<resources>
    <string name="app_name">Sprint1</string>
    <string name="registro">REGISTRO</string>
    <string name="apellido">Apellido</string>
    <string name="registrar">REGISTRAR</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="nombre">Nombre</string>
    <string name="usuario">Usuario</string>
    <string name="by_cristian_bar_n">©By Cristian Barón</string>
    <string name="correo_view2">Correo:</string>
    <string name="contrase_a_view2">Contraseña:</string>
    <string name="nombreview2">Nombre:</string>
    <string name="apellido_view2">Apellido:</string>
    <string name="usuario_view2">Usuario:</string>
    <string name="datos_registrados_view2">DATOS REGISTRADOS</string>
    <string name="sus_datos_son_view2">Sus datos son:</string>
    <string name="by_cristian_bar_n_view2">©By Cristian Barón</string>
    <string name="todo">TODO</string>
</resources>